# kurbits

./: CMakeLists.txt  easy-settings.cmake  settings.cmake
apps/bcm2835-armctrl-ic-server/: CMakeLists.txt
apps/bcm2835-armctrl-ic-server/include/bcm2835-armctrl-ic/: server.h
apps/bcm2835-armctrl-ic-server/src/: server.c
apps/kurbits-root/: CMakeLists.txt  main.c
